crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_object_types-3.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"{\\n  a: number,\\n  b?: string,\\n  c: boolean,\\n}\")"
---
TypeAnn {
    kind: Object(
        [
            Prop(
                Prop {
                    span: 0..0,
                    name: "a",
                    modifier: None,
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Number,
                        span: 7..13,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "b",
                    modifier: None,
                    optional: true,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: String,
                        span: 21..27,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "c",
                    modifier: None,
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Boolean,
                        span: 34..41,
                        inferred_type: None,
                    },
                },
            ),
        ],
    ),
    span: 0..44,
    inferred_type: None,
}
