crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_parens_for_grouping.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"number & (string | boolean)\")"
---
TypeAnn {
    kind: Intersection(
        [
            TypeAnn {
                kind: Number,
                span: 0..6,
                inferred_type: None,
            },
            TypeAnn {
                kind: Union(
                    [
                        TypeAnn {
                            kind: String,
                            span: 10..16,
                            inferred_type: None,
                        },
                        TypeAnn {
                            kind: Boolean,
                            span: 19..26,
                            inferred_type: None,
                        },
                    ],
                ),
                span: 10..26,
                inferred_type: None,
            },
        ],
    ),
    span: 0..26,
    inferred_type: None,
}
